Frameserver rendering no longer works in 2.75 or 2.75a. #45397

Closed
opened 2015-07-09 23:06:47 +02:00 by Chris Larkee · 7 comments

The frameserver appears to be nonfunctional on Windows 7 at least. I have not tried this on other OSes.

To recreate:

  • Launch Blender.
  • Set the output image type to Frameserver.

Push the render animation button.

On 2.74, the frameserver starts, and http://localhost:8080 becomes accessible in a browser. This is the desired behavior. On the first run, a Windows Security Alert appears, but it is dismissable.

On 2.75, nothing happens at all. There's no error in the console, and http://localhost:8080 is unreachable.

I'm using the 64-bit official builds on Windows 7. I've checked my firewall settings, but I don't think that's the issue because the frameserver started working again once I went back from 2.75a to 2.74.

The frameserver appears to be nonfunctional on Windows 7 at least. I have not tried this on other OSes. To recreate: - Launch Blender. - Set the output image type to Frameserver. # Push the render animation button. On 2.74, the frameserver starts, and http://localhost:8080 becomes accessible in a browser. This is the desired behavior. On the first run, a Windows Security Alert appears, but it is dismissable. On 2.75, nothing happens at all. There's no error in the console, and http://localhost:8080 is unreachable. I'm using the 64-bit official builds on Windows 7. I've checked my firewall settings, but I don't think that's the issue because the frameserver started working again once I went back from 2.75a to 2.74.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @chrislarkee

Added subscriber: @chrislarkee
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

This issue was referenced by 5201748f5f

This issue was referenced by 5201748f5f5a0b1ac026a21dbcf64ce4ce0d0025

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @Sergey

Added subscriber: @Sergey

Fixed in latest git now. You can try accessing http://localhost:8080/index.html in 2.75a release and think it should work for you for until 2.76 is out.

Fixed in latest git now. You can try accessing http://localhost:8080/index.html in 2.75a release and think it should work for you for until 2.76 is out.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45397
No description provided.