Fix T45397: Frameserver rendering no longer works in 2.75 or 2.75a

Issue was caused by a typo in original multiview commit.